--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <li>Green pepper</li>
             <li>carrots</li>
         </ol>
-        <img src="file:///C:/Users/emma/Desktop/fried%20rice.jfif"> 
+        <img src="fried rice.jfif"> 
     </body>
     <footer></footer>
     </html>
