--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <li>Green pepper</li>
             <li>carrots</li>
         </ol>
-        <img src="fried rice.jfif"> 
+        <img src="https://img-global.cpcdn.com/recipes/5da646cc1c73a947/1200x630cq70/photo.jpg"> 
     </body>
     <footer></footer>
     </html>
